@@ -3,3 +3,4 @@
 plunger/*.dae
 plunder/*.md3
 .git/
+*.e3?
